--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: #1c1b1b;
   height: 100%;
 }
 
@@ -111,6 +111,7 @@ body {
 .wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-weight: 700;
 }
 
@@ -122,12 +123,16 @@ body {
   width: 30%;
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  font-size: 1.25em;
+  background-color: #1c1b1b;
   height: 300px;
+  overflow: visible;
 }
 
-
+.div-1, .div-2 {
+    border-right: 1px solid #555;
+    padding-right: 30px;
+}
 
 
 /* ==========================================================================
