--- a/css/main.css
+++ b/css/main.css
@@ -99,34 +99,44 @@ textarea {
 html {
   background-color: #1c1b1b;
   height: 100%;
+  width: 100%;
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
+  color: #fff;
+  line-height: 1.5em;
   padding: 2em;
   font-size: 1.25em;
   height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  font-weight: 700;
+  flex-flow: row wrap;
+  max-width: 1200px;
 }
 
+header{
+    font-size: 3em;
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 30px;
+}
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   display: flex;
-  justify-content: center;
   align-items: center;
   width: 30%;
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.25em;
+  font-size: 1em;
   background-color: #1c1b1b;
-  height: 300px;
-  overflow: visible;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
 
 .div-1, .div-2 {
@@ -134,6 +144,25 @@ body {
     padding-right: 30px;
 }
 
+header, footer{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+main{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid #fff;
+    align-items: center;
+    margin-bottom: 20px;
+}
+footer{
+    font-size: 2em;
+    border-top: 1px solid #fff;
+    align-items: center;
+}
 
 /* ==========================================================================
    Helper classes
